# tracklistify-studio

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  TracklistifyGUI.spec  app.py  config.py  database.py  install.sh  job_manager.py  logo_src.ai  pyproject.toml  requirements.txt  start_helper.bat
.tracklistify/output/: [20251203] Carmen Electro HÖR ON TOUR Gdańsk - 11 October ⧸ 2025.m3u  [20251203] Carmen Electro HÖR ON TOUR Gdańsk - 11 October ⧸ 2025.md  [20251203] Unknown Artist - CHLAR_F2F_YANAMASTE_FACE_2_FACE_-_MONEGROS_FULL_TECHNO_SET.json  [20251203] Unknown Artist - CHLAR_F2F_YANAMASTE_FACE_2_FACE_-_MONEGROS_FULL_TECHNO_SET.m3u  [20251203] Unknown Artist - CHLAR_F2F_YANAMASTE_FACE_2_FACE_-_MONEGROS_FULL_TECHNO_SET.md  [20251203] Unknown Artist - CLR Podcast 446 Temudo.m3u  [20251203] Unknown Artist - CLR Podcast 446 Temudo.md  [20251203] Unknown Artist - Carmen_Electro_HOR_ON_TOUR_Gda_sk_-_11_October_2025.json  [20251203] Unknown Artist - Carmen_Electro_HOR_ON_TOUR_Gda_sk_-_11_October_2025.md  [20251203] Unknown Artist - Hyden_Techno_DJ_Set_SECTION._November_2025.json  [20251203] Unknown Artist - Hyden_Techno_DJ_Set_SECTION._November_2025.m3u  [20251203] Unknown Artist - Hyden_Techno_DJ_Set_SECTION._November_2025.md  [20251203] Unknown Artist - MAC_DECLOS_F2F_LACCHESI_FACE_2_FACE_-_MONEGROS.json  [20251203] Unknown Artist - MAC_DECLOS_F2F_LACCHESI_FACE_2_FACE_-_MONEGROS.m3u  [20251203] Unknown Artist - MAC_DECLOS_F2F_LACCHESI_FACE_2_FACE_-_MONEGROS.md  [20251203] Unknown Artist - SHDW_at_EXPO_XXI_Warsaw_Poland_2025.json  [20251203] Unknown Artist - SHDW_at_EXPO_XXI_Warsaw_Poland_2025.m3u  [20251203] Unknown Artist - SHDW_at_EXPO_XXI_Warsaw_Poland_2025.md  [20251204] Unknown Artist - 648c04ca-2664-44a4-832a-5a14a757d68e.json  [20251204] Unknown Artist - 648c04ca-2664-44a4-832a-5a14a757d68e.md  [20251204] Unknown Artist - 8fc790be-a60b-4b29-95ea-f04e680a1530.json  [20251204] Unknown Artist - 8fc790be-a60b-4b29-95ea-f04e680a1530.m3u  [20251204] Unknown Artist - 8fc790be-a60b-4b29-95ea-f04e680a1530.md  [20251204] Unknown Artist - 9d3c0281-2349-49ff-9cb5-49be638fccc1.json  [20251204] Unknown Artist - 9d3c0281-2349-49ff-9cb5-49be638fccc1.m3u  [20251204] Unknown Artist - 9d3c0281-2349-49ff-9cb5-49be638fccc1.md  [20251204] Unknown Artist - c141e4b8-9127-4983-9a77-d76179c36b30.json  [20251204] Unknown Artist - c141e4b8-9127-4983-9a77-d76179c36b30.m3u  [20251204] Unknown Artist - c141e4b8-9127-4983-9a77-d76179c36b30.md  [20251204] Unknown Artist - efcda65a-0464-4f53-b903-dfc354379b12.json  [20251204] Unknown Artist - efcda65a-0464-4f53-b903-dfc354379b12.m3u  [20251204] Unknown Artist - efcda65a-0464-4f53-b903-dfc354379b12.md  [20251219] Unknown Artist - b8c94033-2912-4f8d-ac13-2f5d2ca969bb.json
api/: resolve_metadata
backend/: models.py  storage.py
docs/: CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md
scripts/: generate_config_docs.py
services/: analyzer.py  atomic_storage.py  enrichment.py  importer.py  processor.py  resolver.py  settings_store.py  user_store.py
src/aiofiles/: __init__.py
src/tracklistify/: __init__.py  __main__.py  cli.py  dev-cli.py  dev.py
src/tracklistify/cache/: __init__.py  base.py  factory.py  index.py  invalidation.py  storage.py
src/tracklistify/config/: __init__.py  base.py  docs.py  factory.py  paths.py  security.py  validation.py
src/tracklistify/core/: __init__.py  base.py  exceptions.py  run.py  track.py  types.py
src/tracklistify/dev_cli/: README.md  __init__.py  cli.py  config.py  exceptions.py  logging.py  tools.json
src/tracklistify/downloaders/: __init__.py  base.py  factory.py  mixcloud.py  spotify.py  ytdlp.py
static/css/: style.css  tailwind.css
static/js/: app.js
templates/: auth.html  base.html  index.html  login.html  profile.html  register.html  set_view.html
templates/components/: dashboard.html  footer_player.html  header.html  main_likes.html  main_view.html  modals.html  queue_view.html  rescan_view.html  sidebar_likes.html  sidebar_sets.html
tests/: TESTING.md  test_app.py  test_cache.py  test_config.py  test_environment.py  test_importer.py  test_importer_service.py  test_processor.py  test_profile_api.py  test_rate_limiter.py  test_track_matcher.py  test_validation.py
(+24 files in other folders)
